applications/home-assistant/overlays/ingress/istio/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: home-assistant
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
